--- a/arch/arm/configs/cm_t0lte_defconfig
+++ b/arch/arm/configs/cm_t0lte_defconfig
@@ -1405,6 +1405,7 @@ CONFIG_TIMA_LOG=y
 # CONFIG_SEC_MODEM is not set
 CONFIG_TOUCH_WAKE=y
 CONFIG_TOUCH_BOOST_SWITCH=y
+CONFIG_TOUCHSCREEN_TAP2UNLOCK=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
