--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1105,6 +1105,11 @@ config TOUCHSCREEN_MELFAS_GD2
 	  To compile this driver as a module, choose M here: the
 	  module will be called GC model MMS.
 
+config TOUCHSCREEN_TAP2UNLOCK
+	tristate "Tap to unlock for touchscreens"
+	depends on TOUCH_WAKE
+	default n
+
 config TOUCH_BOOST_SWITCH
 	bool "Support for Touch Boost sysfs tunable cpu frequency"
 	depends on TOUCHSCREEN_MELFAS || TOUCHSCREEN_MELFAS_NOTE
